<com.example.auctionapplication.SearchView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.auctionapplication.SearchController"
    android:orientation="vertical" 
     >
    
	<Button 
	    android:id="@+id/openAddItemPage"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/Add_an_Item"
	    />
    
    <Button 
        android:id="@+id/searchbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Search_Button"
        />
   <EditText
       android:id="@+id/searchspace"
       android:hint="@string/Input_your_search"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:inputType="text"
       />
   
   <ListView
       android:id="@+id/listofitems"
       android:layout_width="match_parent"
       android:layout_height="match_parent" >
   </ListView>
   
</com.example.auctionapplication.SearchView>
