<com.example.auctionapplication.AuctionView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.auctionapplication.AuctionController" >

    <Button
        android:id="@+id/searchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toSearchMenu"
        android:text="@string/Search" />
    
     <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edit_Item" />
       <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete_Item" />

    <TextView
        android:id="@+id/itemforsale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="243dp"
        android:layout_height="292dp"
        android:layout_gravity="center"
        android:baselineAlignBottom="true"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/itembidprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="1" />

    <TextView
        android:id="@+id/timeleftfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle" >

        <Button
            android:id="@+id/bid_button"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_weight="0.13"
            android:background="@drawable/buttonshape"
            android:text="@string/Bid"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="2px"
            android:layout_height="fill_parent"
            android:background="#90909090"
            tools:ignore="PxUsage" />

        <Button
            android:id="@+id/bid_button5"
            android:layout_width="94dp"
            android:layout_height="36dp"
            android:layout_weight="0.31"
            android:background="@drawable/buttonshape"
            android:text="@string/Bid_$5"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

       
        
    </LinearLayout>

</com.example.auctionapplication.AuctionView>